--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               name="_subject"
               value="Vocabulary Development - New Registration"
             />
-            <input type="hidden" name="_next" value="msha.ke/grayseeh" />
+            <input type="hidden" name="_next" value="https://msha.ke/grayseeh" />
       
             <button id="btn" type="submit">Register</button>
           </form>
