--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <script>
       let btn = document.getElementById("btn");
 
-      btn.addEventListener("submit", () => {
+      btn.addEventListener("click", () => {
         alert(
           "This form has been submitted successfully. \n You will now bw taken back to the home page."
         );
