--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
         />
         <input type="hidden" name="_next" value="https://msha.ke/grayseeh" />
 
+        <input type="hidden" name="_captcha" value="false">
+
         <button id="btn" type="submit">Register</button>
       </form>
     </div>
@@ -69,7 +71,7 @@
 
       btn.addEventListener("click", () => {
         alert(
-          "This form has been submitted successfully. \n You will now bw taken back to the home page."
+          "This form has been submitted successfully. \n You will now be taken back to the home page."
         );
       });
     </script>
