--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
       btn.addEventListener("click", () => {
         alert(
-          "This form has been submitted successfully. \n You will now be taken back to the home page."
+          "Thank you for booking a course, You will receive a reply via email shortly!"
         );
       });
     </script>
